--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "clsx": "^2.1.1",
     "framer-motion": "^12.23.22",
+    "lucide-react": "^0.544.0",
     "next": "15.5.3",
     "next-auth": "^4.24.11",
     "react": "19.1.0",
